[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/car_parts/AIRaycast.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/car_parts/wheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/car_parts/nitro_particles.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui_event/ui_event_v2.scn" type="PackedScene" id=4]
[ext_resource path="res://scripts/base_scripts/car.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=10]

[node name="Car" type="VehicleBody" groups=["Car"]]
script = ExtResource( 5 )

[node name="StateMachine" type="Node" parent="."]

[node name="Control" parent="." instance=ExtResource( 4 )]

[node name="CarMesh" type="MeshInstance" parent="."]
skeleton = NodePath("../..")

[node name="FrontLeftWheel" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 1.87959, -0.878698, 1.54511 )
use_as_traction = false
use_as_steering = true

[node name="BackLeftWheel" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 1.87959, -0.878698, -2.42232 )

[node name="FrontRightWheel" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, -1.87959, -0.878698, 1.54511 )
use_as_traction = false
use_as_steering = true

[node name="WheelMesh" parent="FrontRightWheel" index="0"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, -1, 0, 0, 0 )

[node name="BackRightWheel" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, -1.87959, -0.878698, -2.42232 )

[node name="WheelMesh" parent="BackRightWheel" index="0"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, -1, 0, 0, 0 )

[node name="NitroParticles" parent="." instance=ExtResource( 3 )]

[node name="CPUParticles" parent="NitroParticles" index="0"]
direction = Vector3( 0, 0, 1 )

[node name="NitroParticles2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -1.16328, -1.11729, -3.86949 )

[node name="CPUParticles" parent="NitroParticles2" index="0"]
direction = Vector3( 0, 0, 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2.052, 0, 0, 0, 1.088, 0, 0, 0, 3.359, 0, 0.0562679, -0.342492 )
shape = SubResource( 10 )

[node name="RayCast" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.573992, 0 )

[node name="0" parent="RayCast" instance=ExtResource( 1 )]

[node name="30" parent="RayCast" instance=ExtResource( 1 )]
transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0, 0, 0 )

[node name="60" parent="RayCast" instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0 )

[node name="90" parent="RayCast" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="-30" parent="RayCast" instance=ExtResource( 1 )]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, 0 )

[node name="-60" parent="RayCast" instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0, 0, 0 )

[node name="-90" parent="RayCast" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[editable path="FrontLeftWheel"]
[editable path="BackLeftWheel"]
[editable path="FrontRightWheel"]
[editable path="BackRightWheel"]
[editable path="NitroParticles"]
[editable path="NitroParticles2"]
